# sample_paper

./: .gitignore  Dockerfile  Readme.md  docker-compose.yml  pyproject.toml  pytest.ini
Postman_collections/: sample_paper.postman_collection.json
sample_page/: app.py  config.py  paper_service.py
sample_paper/: app.py  config.py  deleteme1.py  entity.py  models.py  paper_service.py  task.py  utils.py
tests/: test_sample.py
