[tool.poetry]
name = "sample page"
version = "0.1.0"
description = ""
authors = ["kiran <kirannadimpalli2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
